Edited wiki page through web user interface.

--- a/wiki/ReleasePage.wiki
+++ b/wiki/ReleasePage.wiki
@@ -2,4 +2,6 @@
 
 = Introduction =
 
-Please be patient as I start this project.  I still haven't migrated my source to the svn repository on code.google.com.  So if you want to wait to download the ipddump-0.1.0.jar until then, please do.
+Release 0.1.0 is basically just the release I wanted when I started this project.  It takes any IPD Blackberry dump and outputs a CSV formatted list of your SMS messages.
+
+Please note that I'm not packaging up the source until I start hitting major releases.  You can easily access the subversion repository at [http://ippdump.googlecode.com/svn/trunk/ http://ippdump.googlecode.com/svn/trunk/].
