Edited wiki page through web user interface.

--- a/wiki/ReleasePage.wiki
+++ b/wiki/ReleasePage.wiki
@@ -1,7 +1,13 @@
-#summary Explanation of 0.1.0
+#summary Summary of Releases
 
-= Introduction =
+== 0.2.0 ==
+
+Release 0.2.0 provides a new GUI, which will be the main interaction method going forward.  It also supports exporting SMS, memos and contacts as XML, text or csv.
+
+== 0.1.1 ==
+
+Release 0.1.1 is an update to fix a crash some people (including me) have been having.  Specifically, issue [http://code.google.com/p/ipddump/issues/detail?id=2 2]
+
+== 0.1.0 ==
 
 Release 0.1.0 is basically just the release I wanted when I started this project.  It takes any IPD Blackberry dump and outputs a CSV formatted list of your SMS messages.
-
-Please note that I'm not packaging up the source until I start hitting major releases.  You can easily access the subversion repository at [http://ipddump.googlecode.com/svn/trunk/ http://ipddump.googlecode.com/svn/trunk/].
