Removed myself from the about.

--- a/src/gui/resources/IPDdumpAboutBox_en.properties
+++ b/src/gui/resources/IPDdumpAboutBox_en.properties
@@ -1,13 +1,13 @@
 title= IPDdump About
 id= ${Application.name}
 name= IPDdump
-version= 0.2.1beta
+version= 0.2.1
 versionLabel=Product Version:
-vendor= Jimmys, Borkhobs
+vendor= Jimmys
 vendorLabel=Vendor:
 homepageLabel=Homepage:
 homepage= http://code.google.com/p/ipddump/
-vendorId= Jimmys, Borkhobs
+vendorId= Jimmys
 id= ${Application.name}
 lookAndFeel= system
 iconLabelIcon=/gui/resources/about.png
