--- a/trunk/src/gui/resources/IPDdumpAboutBox_en.properties
+++ b/trunk/src/gui/resources/IPDdumpAboutBox_en.properties
@@ -1,7 +1,7 @@
 title= IPDdump About
 id= ${Application.name}
 name= IPDdump
-version= 0.2.1
+version= 0.2.1 RC1
 versionLabel=Product Version:
 vendor= Jimmys
 vendorLabel=Vendor:
