--- a/trunk/src/gui/resources/IPDdumpAboutBox_en.properties
+++ b/trunk/src/gui/resources/IPDdumpAboutBox_en.properties
@@ -1,4 +1,5 @@
 title= IPDdump About
+welcomeMsg= Welcome to IPDdump - http://code.google.com/p/ipddump/
 id= ${Application.name}
 name= IPDdump
 version= 0.2.1 RC2
