--- a/src/gui/resources/IPDdumpAboutBox_en.properties
+++ b/src/gui/resources/IPDdumpAboutBox_en.properties
@@ -2,7 +2,7 @@ title= IPDdump About
 welcomeMsg= Welcome to IPDdump - http://code.google.com/p/ipddump/
 id= ${Application.name}
 name= IPDdump
-version= 0.2.5
+version= 0.3 Beta
 versionLabel=Product Version:
 vendor= Jimmys
 vendorLabel=Vendor:
