--- a/src/gui/resources/IPDdumpAboutBox_en.properties
+++ b/src/gui/resources/IPDdumpAboutBox_en.properties
@@ -2,7 +2,7 @@ title= IPDdump About
 welcomeMsg= Welcome to IPDdump - http://code.google.com/p/ipddump/
 id= ${Application.name}
 name= IPDdump
-version= 0.3 RC1
+version= 0.3 RC2
 versionLabel=Product Version:
 vendor= Jimmys
 vendorLabel=Vendor:
@@ -12,7 +12,7 @@ vendorId= Jimmys
 id= ${Application.name}
 lookAndFeel= system
 iconLabelIcon=/gui/resources/about.png
-description= <html>The ipddump utility was created initially to extract SMS records from a Blackberry backup, which is an IPD (Inter@ctive Pager Backup) file. Its goal is to be able to extract and export all types of records into customized open text formats. It now supports Sms, Contacts and Memos in XML, CSV and plain text formats! The app is 100% free! please leave feedback in http://code.google.com/p/ipddump/issues/list for any issues you might have!<\html>
+description= <html>The ipddump utility was created initially to extract SMS records from a Blackberry backup, which is an IPD (Inter@ctive Pager Backup) file. Its goal is to be able to extract and export all types of records into customized open text formats. It now supports Sms, Contacts and Memos and Call Logs in XML, CSV and plain text formats! The app is 100% free! please leave feedback in http://code.google.com/p/ipddump/issues/list for any issues you might have!<\html>
 ResolveNames=true
 toolTips=true
-UseAdrrBook=false
+UseAdrrBook=true
