--- a/trunk/src/gui/resources/IPDdumpAboutBox_en.properties
+++ b/trunk/src/gui/resources/IPDdumpAboutBox_en.properties
@@ -15,4 +15,4 @@ iconLabelIcon=/gui/resources/about.png
 description= <html>The ipddump utility was created initially to extract SMS records from a Blackberry backup, which is an IPD (Inter@ctive Pager Backup) file. Its goal is to be able to extract and export all types of records into customized open text formats. It now supports Sms, Contacts and Memos and Call Logs in XML, CSV and plain text formats! The app is 100% free! please leave feedback in http://code.google.com/p/ipddump/issues/list for any issues you might have!<\html>
 ResolveNames=true
 toolTips=true
-UseAdrrBook=true
+UseAdrrBook=false
