--- a/trunk/src/gui/resources/IPDdumpAboutBox_en.properties
+++ b/trunk/src/gui/resources/IPDdumpAboutBox_en.properties
@@ -2,7 +2,7 @@ title= IPDdump About
 welcomeMsg= Welcome to IPDdump - http://code.google.com/p/ipddump/
 id= ${Application.name}
 name= IPDdump
-version= 0.3
+version= 0.3 RC4
 versionLabel=Product Version:
 vendor= Jimmys
 vendorLabel=Vendor:
